--- a/styles/home.css
+++ b/styles/home.css
@@ -84,7 +84,6 @@
 }
 #output-container {
     word-break: keep-all;
-    overflow-y: scroll;
     display: flex;
     flex-direction: column;
 }
@@ -92,8 +91,8 @@
 #text-output-container {
     width: 100%;
     height: 95%;
+    overflow-y: auto;
     overflow-wrap: break-word;
-    overflow-y: scroll;
 }
 
 #stats-output-container {
