--- a/styles/infoModal.css
+++ b/styles/infoModal.css
@@ -1,10 +1,10 @@
 #modal-background {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
     background: transparent;
     backdrop-filter: blur(2px);
     z-index: 1;
+    width: 100%;
+    height: 100%;
 }
 .modal {
     background: white;
